[package]
name = "posts"
version = "0.1.0"
authors = ["Jon Wolski <jonwolski@gmail.com>"]

[lib]
name = "posts"
path = "src/lib.rs"

[[bin]]
name = "posts"
path = "src/main.rs"

[dependencies]
diesel = { version = "0.16.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0"
clap = "2.20.3"
