[package]
name = "posts"
version = "0.1.0"
authors = ["Jon Wolski <jonwolski@gmail.com>"]

[lib]
name = "posts"
path = "src/lib.rs"

[[bin]]
name = "posts"
path = "src/main.rs"

[dependencies]
clap = "2.20.3"
diesel = { version = "0.16.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0"
lazy_static = "0.2"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
